完成开始记账页面

--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -1,3 +1,4 @@
 :root{
-  --welcome-bg-color:linear-gradient(180deg, #5C33BE 0%, #8F4CD7 100%)
+  --welcome-bg-color:linear-gradient(180deg, #5C33BE 0%, #8F4CD7 100%);
+  --startpage-header-text-height:9.61vh;
 }
