完成侧边栏菜单的交互

--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -1,4 +1,6 @@
 :root{
   --welcome-bg-color:linear-gradient(180deg, #5C33BE 0%, #8F4CD7 100%);
   --startpage-header-text-height:9.61vh;
+  --sidebar-away-top-heigth:2.5vh;
+  --sidebar-mask-z-index:2;
 }
