--- a/src/view/StartAccount.module.scss
+++ b/src/view/StartAccount.module.scss
@@ -1,5 +1,8 @@
 .wrapper{
-
+  height: calc(100vh - var(--startpage-header-text-height));
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .tabs{
