--- a/src/components/Tag/TagCreate.module.scss
+++ b/src/components/Tag/TagCreate.module.scss
@@ -12,7 +12,6 @@
 .inputClass{
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
   padding: 34px 16px 16px 16px;
   .tagNameClass{
     font-size: 18px;
@@ -32,9 +31,13 @@
   }
 }
 
+.mainClass{
+  width: 100vw;
+  height: calc(100vh - var(--startpage-header-text-height) - 161px - 153px);
+}
+
 .upButton {
   display: flex;
-  border: 1px solid red;
   justify-content: center;
   align-items: center;
   padding: 37px 16px 66px 16px;
@@ -46,4 +49,11 @@
     color: #FFFFFF;
     font-size: 18px;
   }
+}
+
+.secondBlank{
+  position: relative;
+  transform: translateX(17px) translateY(-20px);
+  font-size: 14px;
+
 }
