初步完成倒计时按钮

--- a/src/shared/FormItem.module.scss
+++ b/src/shared/FormItem.module.scss
@@ -37,6 +37,10 @@
       background: #5C33BE;
       color: #FFFFFF;
       border-radius: 10px;
+      &[disabled]{
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
     }
   }
 }
