--- a/src/shared/ItemList.module.scss
+++ b/src/shared/ItemList.module.scss
@@ -12,6 +12,22 @@
     align-items: center;
     width: 20%;
     margin-top: 15px;
+    >div{
+      font-size: 20px;
+
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 0px;
+      background: #EFEFEF;
+
+    }
+    .selected{
+      border: 2px solid #8F4CD7;
+    }
   }
 }
 
