--- a/src/shared/Bill.module.scss
+++ b/src/shared/Bill.module.scss
@@ -2,13 +2,15 @@
   width: 100vw;
   height: calc(100vh - var(--startpage-header-text-height) - 40px - 100px);
   padding: 20px 20px 0 20px;
+  overflow: scroll;
 }
 
 .billBar{
   width: 100%;
-  height:60px ;
+  height:60px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
   .iconClass{
     flex-shrink: 0;
     width: 60px;
@@ -36,4 +38,14 @@
     font-size: 16px;
     color: #53A867;
   }
+}
+
+.incomeColor{
+  width: var(--width-auto);
+  margin-top: 5px;
+  font-size: 16px;
+  color: #FE7275;
+}
+.lastChild:last-child{
+  margin-bottom:60px;
 }
