--- a/src/shared/Sidebar.module.scss
+++ b/src/shared/Sidebar.module.scss
@@ -25,6 +25,14 @@
   background: #5C33BE;
   padding: 32px 0 44px 16px;
   height:14vh;
+
+  .emailText{
+    overflow: hidden;
+    text-overflow:ellipsis;
+    color: #FFFFFF;
+    font-size: 24px;
+  }
+
   .userText{
     color: #FFFFFF;
     font-size: 24px;
