修改了自定义时间的按钮颜色使背景统一

--- a/src/view/AccountDetail.module.scss
+++ b/src/view/AccountDetail.module.scss
@@ -50,10 +50,12 @@
     position: absolute;
     bottom: 16px;
     right: 19px;
+    background: #FFFFFF;
   }
   .noButton{
     position: absolute;
     bottom: 16px;
     right: 80px;
+    background: #FFFFFF;
   }
 }
