--- a/src/components/Tag/TagEdit.module.scss
+++ b/src/components/Tag/TagEdit.module.scss
@@ -3,8 +3,8 @@
 }
 .upDeleteButton{
   padding: 0 16px;
-  position: absolute;
-  bottom: 15px;
+  position: fixed;
+  bottom: 10px;
   right: 0;
   left: 0;
   .deleteButton{
