修改了基础配色，修复了menu的icon与标题不匹配的bug

--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -1,7 +1,8 @@
 :root{
-  --welcome-bg-color:linear-gradient(180deg, #5C33BE 0%, #8F4CD7 100%);
+  --welcome-bg-color:#0066CC;
   --startpage-header-text-height:9.61vh;
   --sidebar-away-top-heigth:2.5vh;
   --sidebar-mask-z-index:2;
   --width-auto:auto;
+  --main-color:#0066CC;
 }
