--- a/src/shared/MainLayout.module.scss
+++ b/src/shared/MainLayout.module.scss
@@ -2,7 +2,7 @@
 
 }
 .headerText{
-  background: linear-gradient(180deg, #5C33BE 0%, #8F4CD7 100%);
+  background:var(--main-color);
   height:var(--startpage-header-text-height);
   display: flex;
   align-items: center;
@@ -10,6 +10,7 @@
   .titleText{
     color: #FFFFFF;
     font-size: 24px;
+    line-height: 32px;
     margin-left: 5.03vw;
   }
   .titleIcon{
