--- a/src/shared/Calculator.module.scss
+++ b/src/shared/Calculator.module.scss
@@ -26,7 +26,7 @@
   }
   .AmountNumber{
     font-size: 20px;
-    color: #53A867;
+    color:#FF850A;
 
   }
 }
@@ -94,7 +94,7 @@
   :nth-child(13){
     grid-area: s;
     color: #FFFFFF;
-    background: #5C33BE;
+    background: var(--main-color);
   }
 
 }
