--- a/src/shared/FloatButton.module.scss
+++ b/src/shared/FloatButton.module.scss
@@ -1,7 +1,7 @@
 .floatButton{
   width: 56px;
   height: 56px;
-  background:#5C33BE;
+  background:var(--main-color);
   position: absolute;
   bottom: 16px;
   right: 16px;
