--- a/src/shared/IconForm.module.scss
+++ b/src/shared/IconForm.module.scss
@@ -19,7 +19,7 @@
   input{
     width: 100%;
     height: 48px;
-    border:1px solid #5C33BE;
+    border:1px solid var(--main-color);
     border-radius: 10px;
     padding: 15px 15px;
     font-size: 18px;
@@ -47,14 +47,13 @@
     width: 100%;
     height: 48px;
     border-radius: 10px;
-    background: #5C33BE;
+    background: var(--main-color);
     color: #FFFFFF;
     font-size: 18px;
   }
 }
 
 .editButton{
-  border: 1px solid blue;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,7 +62,7 @@
     width: 100%;
     height: 48px;
     border-radius: 10px;
-    background: #5C33BE;
+    background: var(--main-color);
     color: #FFFFFF;
     font-size: 18px;
   }
