修改了主要的Icon

--- a/src/shared/Bill.module.scss
+++ b/src/shared/Bill.module.scss
@@ -56,7 +56,7 @@
   justify-content: center;
   height: 60px;
   .buttonMainClass{
-    background: #5C33BE;
+    background: var(--main-color);
     color: #FFFFFF;
     height: 40px;
     width: 50%;
