--- a/src/view/StartPage.module.scss
+++ b/src/view/StartPage.module.scss
@@ -12,8 +12,8 @@
   }
   .bodyButton{
     color: #FFFFFF;
-    background: #5C33BE;
-    border: #5C33BE;
+    background: var(--main-color);
+    border: var(--main-color);
     width: 92.52vw;
     height: 5.18vh;
     font-size: 18px;
