--- a/src/components/AnalysisPage/AnalusisMainPage.module.scss
+++ b/src/components/AnalysisPage/AnalusisMainPage.module.scss
@@ -13,7 +13,7 @@
     height: 35px;
     width: 132px;
     border-radius: 8px;
-    border-color: #5C33BE;
+    border-color: var(--main-color);
     padding-left: 16px;
     font-size: 16px;
   }
@@ -26,7 +26,7 @@
 
   .title{
     height: 52px;
-    background: #5C33BE;
+    background: var(--main-color);
     color: #FFFFFF;
     display: flex;
     padding:16px;
@@ -39,7 +39,7 @@
     margin-top: 30px;
     padding: 0 16px;
     >div{
-      border: 1px solid #5C33BE;
+      border: 1px solid var(--main-color);
       border-radius: 10px;
       height: 50px;
       padding: 0 16px;
@@ -56,7 +56,7 @@
     margin-top: 25px;
     padding:0 16px;
     >div{
-      border: 1px solid #5C33BE;
+      border: 1px solid var(--main-color);
       border-radius: 10px;
       height: 50px;
       padding: 0 16px;
