--- a/src/shared/FormItem.module.scss
+++ b/src/shared/FormItem.module.scss
@@ -7,7 +7,7 @@
   }
   input{
     height: 50px;
-    border: 1px solid #5C33BE;
+    border: 1px solid var(--main-color);
     border-radius:10px;
     padding: 16px 0 16px 15px;
     margin-bottom:0 ;
@@ -28,13 +28,13 @@
     height: 50px;
     input{
       width: 40%;
-      border: 1px solid #5C33BE;
+      border: 1px solid var(--main-color);
       border-radius: 10px;
       padding: 16px 0 16px 15px;
     }
     button{
       width: 55%;
-      background: #5C33BE;
+      background: var(--main-color);
       color: #FFFFFF;
       border-radius: 10px;
       &[disabled]{
