--- a/src/view/AccountDetail.module.scss
+++ b/src/view/AccountDetail.module.scss
@@ -5,7 +5,7 @@
 
   .title{
     height: 52px;
-    background: #5C33BE;
+    background: var(--main-color);
     color: #FFFFFF;
     display: flex;
     padding:16px;
@@ -18,7 +18,7 @@
     margin-top: 30px;
     padding: 0 16px;
     >div{
-      border: 1px solid #5C33BE;
+      border: 1px solid var(--main-color);
       border-radius: 10px;
       height: 50px;
       padding: 0 16px;
@@ -35,7 +35,7 @@
     margin-top: 25px;
     padding:0 16px;
     >div{
-      border: 1px solid #5C33BE;
+      border: 1px solid var(--main-color);
       border-radius: 10px;
       height: 50px;
       padding: 0 16px;
