--- a/src/view/AdvertisingPage.module.scss
+++ b/src/view/AdvertisingPage.module.scss
@@ -18,7 +18,7 @@
   .titleText{
     font-size: 32px;
     margin-top: 1.08vh;
-    color: #D4D4EE;
+    color: white;
   }
   .footerText{
     display: flex;
