--- a/src/view/SignInPage.module.scss
+++ b/src/view/SignInPage.module.scss
@@ -12,7 +12,7 @@
   }
   h1{
     font-size: 32px;
-    color: #7878FF;
+    color: var(--main-color);
   }
 }
 
@@ -28,7 +28,7 @@
 
 .submitButton{
   height: 50px;
-  background: #5C33BE;
+  background: var(--main-color);
   color: #FFFFFF;
   border-radius: 10px;
   font-size: 18px;
